Add Neuron to portfolio

--- a/02_portfolio.html
+++ b/02_portfolio.html
@@ -78,11 +78,27 @@ permalink: /portfolio/
   </div>
 </div>
 <div class='info-group'>
+  <a href='https://www.neuron.sg/' class='bio-image' style='background-image: url("/images/portfolio/neuron.png")'></a>
+  <div class='info-item'>
+    <h3>Neuron</h3><br/>
+    <span class='subtitle'>Southeast Asia's first regional e-scooter sharing service</span>
+    <p>Neuron Mobility is a technology pioneer in the personal mobility space and owns and operates the largest shared electric scooter fleet in Singapore. Neuron’s shared electric scooter services combine real-time telematics with patented technology to address personal mobility in the daily urban commute, goods delivery and tourist segments.</p>
+  </div>
+</div>
+<div class='info-group'>
   <a href='https://olasso.com/' class='bio-image' style='background-image: url("/images/portfolio/olasso.svg")'></a>
   <div class='info-item'>
     <h3>Olasso</h3><br/>
     <span class='subtitle'>Innovative delivery & return solutions across Asia</span>
     <p>Olasso is a logistics technology platform that gives retailers access to innovative delivery & return solutions across Asia with one integration. Olasso’s platform integrates with Pick Up and Drop Off (“PUDO”) networks, ride-sharing technology companies as well as traditional carriers, redefining post-purchase experiences in ecommerce.</p>
+  </div>
+</div>
+<div class='info-group'>
+  <a href='https://www.qopper.com/' class='bio-image' style='background-image: url("/images/portfolio/qopper.svg")'></a>
+  <div class='info-item'>
+    <h3>Qopper</h3><br/>
+    <span class='subtitle'>Incident management for IoT/enterprise hardware devices</span>
+    <p>Via an integrated platform, Silicon Valley-based Qopper is intending to create a digital twin of deployed devices in the field where each product component for each SKU is represented digitally in a custom designed, extensible database structure. This intends to simplify the development and operation of micro-services amidst the proliferation of connected devices and ecosystem.</p>
   </div>
 </div>
 <div class='info-group'>
@@ -92,14 +108,6 @@ permalink: /portfolio/
     <span class='subtitle'>A modern solution for business travel</span>
     <p>Travelstop is a revolutionary platform aimed at modernising and simplifying business travel. Travelstop makes it super easy to manage your business trips, automate your expense reporting, and provide meaningful insights to business owners.</p>
     <p>Headquartered in Singapore, Travelstop is founded by a team who bring a wealth of experience from companies including Yahoo!, Expedia and HomeAway.</p>
-  </div>
-</div>
-<div class='info-group'>
-  <a href='https://www.qopper.com/' class='bio-image' style='background-image: url("/images/portfolio/qopper.svg")'></a>
-  <div class='info-item'>
-    <h3>Qopper</h3><br/>
-    <span class='subtitle'>Incident management for IoT/enterprise hardware devices</span>
-    <p>Via an integrated platform, Silicon Valley-based Qopper is intending to create a digital twin of deployed devices in the field where each product component for each SKU is represented digitally in a custom designed, extensible database structure. This intends to simplify the development and operation of micro-services amidst the proliferation of connected devices and ecosystem.</p>
   </div>
 </div>
 <div class='info-group'>
