Add Zhiying to the team

--- a/04_team.html
+++ b/04_team.html
@@ -65,6 +65,19 @@ permalink: /team/
   </div>
 </div>
 <div class='info-group'>
+  <div class='bio-image bio-portrait' style='background-image: url("/images/zhiying.jpg")'></div>
+  <div class='info-item'>
+    <h3>Zhiying Chua</h3><br/>
+    <span class='subtitle'>Senior Analyst</span>
+    <p>After graduating from university, Zhiying joined the Investment Banking division in Credit Suisse in London. As part of the Financial Institutions group covering large listed and systematically important banks, insurers and asset managers across Europe, Middle East and Africa, she worked on financial modelling and analysis, advising clients on complex mergers and acquisitions as well as equity, debt and other capital raisings.</p>
+    <p>Keen to be part of the growing dynamism in South East Asia, she moved back to Singapore and joined the small and medium enterprise division of OCBC. As part of the analytics team, she monitored portfolio movements and credit risks for the multi-billion dollar SME portfolio. She also played a vital role in various cross-functional projects implementing new systems and processes across the Bank.</p>
+    <p>Zhiying graduated from the University of Oxford with a Bachelor of Arts in Economics and Management.</p>
+    <div class='bio-contact'>
+      <a href="https://sg.linkedin.com/in/zhiyingchua" class='outbound'>{% include icon-linkedin.svg %}</a>
+    </div>
+  </div>
+</div>
+<div class='info-group'>
   <div class='bio-image bio-portrait' style='background-image: url("/images/dershing.jpg")'></div>
   <div class='info-item'>
     <h3>Der Shing Lim</h3><br/>
