--- a/02_portfolio.html
+++ b/02_portfolio.html
@@ -94,6 +94,15 @@ permalink: /portfolio/
   </div>
 </div>
 <div class='info-group'>
+  <a href='https://www.qoala.id/' class='bio-image' style='background-image: url("/images/portfolio/qoala.svg")'></a>
+  <div class='info-item'>
+    <h3>Qoala</h3><br/>
+    <span class='subtitle'>Direct-to-consumer digital micro-insurance platform for Southeast Asia</span>
+    <p>Qoala, together with leading insurers, brings to market the first fully digital insurance experience in Southeast Asia.</p>
+    <p>Qoala believes insurance is necessary and essential for everyone. The vision is to make insurance universally accessible, affordable, and easy to use with no paperwork by utilising Qoala's proprietary platform pioneering insurance management and no-form claims.</p>
+  </div>
+</div>
+<div class='info-group'>
   <a href='https://www.qopper.com/' class='bio-image' style='background-image: url("/images/portfolio/qopper.svg")'></a>
   <div class='info-item'>
     <h3>Qopper</h3><br/>
