--- a/02_portfolio.html
+++ b/02_portfolio.html
@@ -17,6 +17,15 @@ permalink: /portfolio/
   </div>
 </div>
 <div class='info-group'>
+  <a href='https://blockpunk.net/' class='bio-image' style='background-image: url("/images/portfolio/blockpunk.svg")'></a>
+  <div class='info-item'>
+    <h3>BlockPunk</h3><br/>
+    <span class='subtitle'>The P2P entertainment studio</span>
+    <p>BlockPunk is an entertainment startup that uses blockchain to give creators more control over their digital rights. Focused on the $20B anime industry, BlockPunk enables any creator to easily sell collectible merchandise both digital and physical with a provable record of authenticity and ownership.</p>
+    <p>Based in Singapore and Tokyo, BlockPunk was founded by the former head of anime at Netflix and a PhD with product experience at LinkedIn, InMobi and Quickr.</p>
+  </div>
+</div>
+<div class='info-group'>
   <a href='https://cardup.co/' class='bio-image' style='background-image: url("/images/portfolio/cardup.svg")'></a>
   <div class='info-item'>
     <h3>CardUp</h3><br/>
