--- a/04_team.html
+++ b/04_team.html
@@ -18,7 +18,7 @@ permalink: /team/
     <p>A native from the Bay area with a degree in Computer Science from Sierra College in California, USA, Michael has found his home in East Asia: He has worked in Singapore, Hong Kong and Thailand, and been actively involved in the Asian start-up community over the past ten years.</p>
     <div class='bio-contact'>
       <a href="https://twitter.com/dreampipe" class='outbound'>{% include icon-twitter.svg %}</a>
-      <a href="https://www.linkedin.com/in/dreampipe" class='outbound'>{% include icon-linkedin.svg %}</a>
+      <a href="https://www.linkedin.com/in/seedvc/" class='outbound'>{% include icon-linkedin.svg %}</a>
     </div>
   </div>
 </div>
