--- a/04_team.html
+++ b/04_team.html
@@ -40,7 +40,7 @@ permalink: /team/
   <div class='bio-image bio-portrait' style='background-image: url("/images/tiang.jpg")'></div>
   <div class='info-item'>
     <h3>Tiang Lim Foo</h3><br/>
-    <span class='subtitle'>Operating Partner</span>
+    <span class='subtitle'>Partner</span>
     <p>Tiang started and launched Evernote’s operations in Singapore spearheading market development and business growth in Southeast Asia, Australia and New Zealand.</p>
     <p>Prior to launching Evernote, he served as VP of Product at MoVend, a Singtel Innov8 funded startup focused on mobile application development, content distribution and app monetization. Overseeing developer relations, feature planning and product marketing, Tiang identified key publishing and payment partners for the MoVend commerce platform’s growth.</p>
     <p>With a Bachelor’s in Mechanical Engineering from  National University of Singapore (NUS), he started his career as a medical device engineer designing and implementing manufacturing processes for lean production of cardiovascular stents and catheters in Second Source Medial, a medical device contract manufacturer in San Jose, California and brings this keen understanding of product development to your team.</p>
@@ -68,7 +68,7 @@ permalink: /team/
   <div class='bio-image bio-portrait' style='background-image: url("/images/zhiying.jpg")'></div>
   <div class='info-item'>
     <h3>Zhiying Chua</h3><br/>
-    <span class='subtitle'>Senior Analyst</span>
+    <span class='subtitle'>Associate</span>
     <p>After graduating from university, Zhiying joined the Investment Banking division in Credit Suisse in London. As part of the Financial Institutions group covering large listed and systematically important banks, insurers and asset managers across Europe, Middle East and Africa, she worked on financial modelling and analysis, advising clients on complex mergers and acquisitions as well as equity, debt and other capital raisings.</p>
     <p>Keen to be part of the growing dynamism in South East Asia, she moved back to Singapore and joined the small and medium enterprise division of OCBC. As part of the analytics team, she monitored portfolio movements and credit risks for the multi-billion dollar SME portfolio. She also played a vital role in various cross-functional projects implementing new systems and processes across the Bank.</p>
     <p>Zhiying graduated from the University of Oxford with a Bachelor of Arts in Economics and Management.</p>
