Move Gabriel on the team page

--- a/04_team.html
+++ b/04_team.html
@@ -51,20 +51,6 @@ permalink: /team/
   </div>
 </div>
 <div class='info-group'>
-  <div class='bio-image bio-portrait' style='background-image: url("/images/gabriel.jpg")'></div>
-  <div class='info-item'>
-    <h3>Gabriel Lundberg</h3><br/>
-    <span class='subtitle'>Operating Partner</span>
-    <p>Gabriel's career in the startup world started seven years ago when he joined Spotify as a fresh graduate at its headquarters in Stockholm.</p>
-    <p>Transitioning from engineering to product management, Gabriel helped expand the digital music service's offering into the experience we know today. Responsible for the music search system, he is equally comfortable around big data and scalability issues as around user experience and layout engines. Gabriel also brought Spotify to new mobile platforms, launched a download store and eventually ended up at Spotify Singapore, where he tailored the music streaming service to Southeast Asia preferences.</p>
-    <p>Hailing from Sweden, Gabriel holds a Bachelor of Science in Engineering Physics from Chalmers University of Technology and and also pursued graduate studies in computer science and machine learning.</p>
-    <div class='bio-contact'>
-      <a href="https://twitter.com/snailyone" class='outbound'>{% include icon-twitter.svg %}</a>
-      <a href="https://www.linkedin.com/in/gabriellundberg" class='outbound'>{% include icon-linkedin.svg %}</a>
-    </div>
-  </div>
-</div>
-<div class='info-group'>
   <div class='bio-image bio-portrait' style='background-image: url("/images/zhiying.jpg")'></div>
   <div class='info-item'>
     <h3>Zhiying Chua</h3><br/>
@@ -74,6 +60,20 @@ permalink: /team/
     <p>Zhiying graduated from the University of Oxford with a Bachelor of Arts in Economics and Management.</p>
     <div class='bio-contact'>
       <a href="https://sg.linkedin.com/in/zhiyingchua" class='outbound'>{% include icon-linkedin.svg %}</a>
+    </div>
+  </div>
+</div>
+<div class='info-group'>
+  <div class='bio-image bio-portrait' style='background-image: url("/images/gabriel.jpg")'></div>
+  <div class='info-item'>
+    <h3>Gabriel Lundberg</h3><br/>
+    <span class='subtitle'>Venture Partner</span>
+    <p>Gabriel's career in the startup world started seven years ago when he joined Spotify as a fresh graduate at its headquarters in Stockholm.</p>
+    <p>Transitioning from engineering to product management, Gabriel helped expand the digital music service's offering into the experience we know today. Responsible for the music search system, he is equally comfortable around big data and scalability issues as around user experience and layout engines. Gabriel also brought Spotify to new mobile platforms, launched a download store and eventually ended up at Spotify Singapore, where he tailored the music streaming service to Southeast Asia preferences.</p>
+    <p>Hailing from Sweden, Gabriel holds a Bachelor of Science in Engineering Physics from Chalmers University of Technology and and also pursued graduate studies in computer science and machine learning.</p>
+    <div class='bio-contact'>
+      <a href="https://twitter.com/snailyone" class='outbound'>{% include icon-twitter.svg %}</a>
+      <a href="https://www.linkedin.com/in/gabriellundberg" class='outbound'>{% include icon-linkedin.svg %}</a>
     </div>
   </div>
 </div>
