Update according to Accel branding guidelines

--- a/01_about.html
+++ b/01_about.html
@@ -21,7 +21,7 @@ published: true
   </div>
   <div class='info-item'>
     <h3>Who else is on board?</h3>
-    <p>SeedPlus is a network of networks. Between Jungle Ventures, Eight Roads, Cisco, Accel Partners and SGInnovate, there are few questions we can’t answer and little support we can’t give.</p>
+    <p>SeedPlus is a network of networks. Between Jungle Ventures, Eight Roads, Cisco, Accel and SGInnovate, there are few questions we can’t answer and little support we can’t give.</p>
   </div>
 </div>
 <div class='info-group'>
