--- a/04_team.html
+++ b/04_team.html
@@ -9,20 +9,6 @@ permalink: /team/
 </div>
 
 <div class='info-group'>
-  <div class='bio-image bio-portrait' style='background-image: url("/images/michael.jpg"); background-position: 42% 10%'></div>
-  <div class='info-item'>
-    <h3>Michael Smith Jr</h3><br/>
-    <span class='subtitle'>Partner</span>
-    <p>Michael has helmed technology-led expansions across the region from HOOQ (SingTel), Spuul, Yahoo! and BEA Systems (later acquired by Oracle). Michael is a WebLogic alumnus who currently calls Singapore home and is excited to be a part of the startup ecosystem in Southeast Asia.</p>
-    <p>As Chief Technology Officer at HOOQ he was key in driving product and technology decisions that powered the premium online video content service to customers across Asia. At Yahoo!, Michael served as Director of Global Tech Initiatives. He managed the Asian developer network and oversaw the acquisitions of start-ups and partnerships with companies across Southeast Asia. Michael also spearheaded the acquisition of Koprol which formed the foundation of Yahoo!’s Indonesian engineering site.</p>
-    <p>A native from the Bay area with a degree in Computer Science from Sierra College in California, USA, Michael has found his home in East Asia: He has worked in Singapore, Hong Kong and Thailand, and been actively involved in the Asian start-up community over the past ten years.</p>
-    <div class='bio-contact'>
-      <a href="https://twitter.com/dreampipe" class='outbound'>{% include icon-twitter.svg %}</a>
-      <a href="https://www.linkedin.com/in/seedvc/" class='outbound'>{% include icon-linkedin.svg %}</a>
-    </div>
-  </div>
-</div>
-<div class='info-group'>
   <div class='bio-image bio-portrait' style='background-image: url("/images/tiang.jpg")'></div>
   <div class='info-item'>
     <h3>Tiang Lim Foo</h3><br/>
@@ -33,6 +19,20 @@ permalink: /team/
     <div class='bio-contact'>
       <a href="https://twitter.com/tianglim" class='outbound'>{% include icon-twitter.svg %}</a>
       <a href="https://www.linkedin.com/in/tianglimfoo" class='outbound'>{% include icon-linkedin.svg %}</a>
+    </div>
+  </div>
+</div>
+<div class='info-group'>
+  <div class='bio-image bio-portrait' style='background-image: url("/images/michael.jpg"); background-position: 42% 10%'></div>
+  <div class='info-item'>
+    <h3>Michael Smith Jr</h3><br/>
+    <span class='subtitle'>Advisor</span>
+    <p>Michael has helmed technology-led expansions across the region from HOOQ (SingTel), Spuul, Yahoo! and BEA Systems (later acquired by Oracle). Michael is a WebLogic alumnus who currently calls Singapore home and is excited to be a part of the startup ecosystem in Southeast Asia.</p>
+    <p>As Chief Technology Officer at HOOQ he was key in driving product and technology decisions that powered the premium online video content service to customers across Asia. At Yahoo!, Michael served as Director of Global Tech Initiatives. He managed the Asian developer network and oversaw the acquisitions of start-ups and partnerships with companies across Southeast Asia. Michael also spearheaded the acquisition of Koprol which formed the foundation of Yahoo!’s Indonesian engineering site.</p>
+    <p>A native from the Bay area with a degree in Computer Science from Sierra College in California, USA, Michael has found his home in East Asia: He has worked in Singapore, Hong Kong and Thailand, and been actively involved in the Asian start-up community over the past ten years.</p>
+    <div class='bio-contact'>
+      <a href="https://twitter.com/dreampipe" class='outbound'>{% include icon-twitter.svg %}</a>
+      <a href="https://www.linkedin.com/in/seedvc/" class='outbound'>{% include icon-linkedin.svg %}</a>
     </div>
   </div>
 </div>
