Closing the fund to new investments.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,7 @@ layout: default
 </div>
 <div class='info-group'>
   <div class='info-item'>
-    <h3>One-of-a-kind network</h3>
-    <p>Backed by a network of strong partners, with a pedigree of successful start-up engagements, SeedPlus offers an unparalleled support network.</p>
-  </div>
-  <div class='info-item'>
-    <h3>With you every day</h3>
-    <p>We create sustainable businesses together with founders. Our operating partners come from the industry, and that experience is shared through hands-on work - day in and day out, week in and week out.</p>
-  </div>
-  <div class='info-item'>
-    <h3>Bigger checks</h3>
-    <p>SeedPlus invests­ to take you to your product­-market fit. As you keep growing, we grow along with you to a strong Series A.</p>
+    <h3>Fully deployed.</h3>
+    <p>The SeedPlus fund has been <a href='/portfolio'>fully deployed</a> and is not making any new investments.</p>
   </div>
 </div>
